--- a/src/app/space-launches/launches/launches.component.html
+++ b/src/app/space-launches/launches/launches.component.html
@@ -1,17 +1,19 @@
 <div class="container">
+  <button (click)="orderLaunches('asc')">
+    ASC
+  </button>
+  <button (click)="orderLaunches('desc')">
+    DESC
+  </button>
   <table class="table table-hover">
-      <thead>
+    <thead>
       <tr>
         <th *ngFor="let col of columnTitles">{{ col }}</th>
       </tr>
     </thead>
     <tbody>
-      <tr class=""
-        *ngFor="let launch of lunches"
-        app-launch
-        [columns]="columns"
-        [launch]="launch">
+      <tr class="" *ngFor="let launch of lunches" app-launch [columns]="columns" [launch]="launch">
       </tr>
-      <tbody>
-    </table>
+    <tbody>
+  </table>
 </div>
