Navigate to presskit

--- a/src/app/space-launches/launch/launch.component.html
+++ b/src/app/space-launches/launch/launch.component.html
@@ -1,4 +1,4 @@
 
-<td *ngFor="let col of columns">
+<td *ngFor="let col of columns" (click)="loadPresskit(launch['presskit'])">
     {{ launch[col] | ellipsis:90 }}
   </td>
