--- a/src/app/space-launches/launches/launches.component.html
+++ b/src/app/space-launches/launches/launches.component.html
@@ -1,8 +1,8 @@
 <div class="container">
-  <button (click)="orderLaunches('asc')">
+  <button (click)="orderLaunches( asc )">
     ASC
   </button>
-  <button (click)="orderLaunches('desc')">
+  <button (click)="orderLaunches( desc )">
     DESC
   </button>
   <table class="table table-hover">
