--- a/src/app/space-launches/launch/launch.component.html
+++ b/src/app/space-launches/launch/launch.component.html
@@ -1,4 +1,5 @@
 
-<td *ngFor="let col of columns" (click)="loadPresskit( $event )">
+<td *ngFor="let col of columns" (click)="openPresskit( launch )">
     {{ launch[col] | ellipsis:90 }}
   </td>
+
