--- a/src/app/space-launches/launches/launches.component.html
+++ b/src/app/space-launches/launches/launches.component.html
@@ -5,21 +5,13 @@
   <button (click)="orderLaunches( desc )">
     DESC
   </button>
-  <table class="table table-hover">
-    <thead>
-      <tr>
-        <th *ngFor="let col of columnTitles">{{ col }}</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr class="" *ngFor="let launch of lunches"
-      app-launch
-      [columns]="columns"
-      [launch]="launch"
-      (emitLaunch)="onLaunch($event)">
-      </tr>
-    <tbody>
-  </table>
+<app-table
+[columnTitles]="columnTitles"
+[tableData]="lunches"
+[columns]="columns"
+(emitData)="onLaunch($event)"
+>
+</app-table>
   <ngb-pagination class="d-flex justify-content-center"
       [collectionSize]="91"
       [(page)]="currentPage"
